--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <div class="venue">
             <p class="date"> On December 16, 2022</p>
             <p> At 12:25 pm</p>
-            <img src="logo1.png" alt="" class="logo">
-            <a class="location" href="https://goo.gl/maps/RMs62zAqNdAeZiB76">Shri Chennavrushabendra Temple</a>
+            <!-- <img src="logo1.png" alt="" class="logo"> -->
+            <a class="location" href="https://goo.gl/maps/RMs62zAqNdAeZiB76"><img src="logo1.png" alt="" class="logo"> Shri Chennavrushabendra Temple</a>
             <p> Nesargi. Taluk: Bailhongal</p>
         </div>
 
