--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <div class="container">
         <h4 style="margin-bottom:-5px" class="parents">Mrs. Neelavva and Mr. Irappa Kadlennavar</h4>
         <p class="invite"> cordially invite you to grace the wedding of their daughter</p>
-        <h1 class="heading">Shreedevi</h1>
+        <h1 class="heading bride">Shreedevi</h1>
         <h3>And</h3>
-        <h1 class="heading">Manjunath</h1>
+        <h1 class="heading groom">Manjunath</h1>
         <p>Son of </p>
         <p class="parents">Mrs. Neelambika and Mr. Mahantesh Kabbur</p>
         <br>
